Updating case studies

--- a/coop.html
+++ b/coop.html
@@ -38,25 +38,29 @@
               </ul>
           </nav>
           <section class="hero">
-              <h1>standing out in a crowded room</h1>
-              <img src="images/coop-laptop.png">
-              <div class="hero-text">
-                  <p>COOP is a SaaS web application which allows people to collect information and
-                    store it in a single place. A person can create simple documents, store images,
-                    links to websites, and collaborate with others. Originally named blocbox, we
-                    rebranded the company with a new website and brand.
-                  <p>COOP was a project under the Bloc certification course. It is not a functioning website.
-                  </p>
-                </div>
-                <a href="#"><button class="case-study-button">view prototype</button></a>
+              <div class="case-hero">
+                  <h1>standing out in a crowded room</h1>
+                  <img src="images/coop-laptop.png">
+                  <div class="hero-text">
+                      <p>COOP is a SaaS web application which allows people to collect information and
+                        store it in a single place. A person can create simple documents, store images,
+                        links to websites, and collaborate with others. Originally named blocbox, we
+                        rebranded the company with a new website and brand.
+                      <p>COOP was a project under the Bloc certification course. It is not a functioning website.
+                      </p>
+                    </div>
+                    <a href="#"><button class="case-study-button">view prototype</button></a>
+              </div>
           </section>
       </header>
       <main>
           <section class="intro">
-              <h2>a new set of wings</h2>
-              <p>The goal was to rebrand blocbox from an office tool into software that
-                would be used beyond the cubical. </p>
-              <img src="images/blocbox-coop.png" class="full">
+              <div class="intro-text">
+                  <h2>a new set of wings</h2>
+                  <p>The goal was to rebrand blocbox from an office tool into software that
+                    would be used beyond the cubical. </p>
+                  <img src="images/blocbox-coop.png" class="full">
+              </div>
               <div class="competition">
                   <h3>Who's Out There?</h3>
                   <p>Since there are quite a few similar services out there, we
@@ -80,19 +84,21 @@
                     Looking what devices they use, how and what they save, and where,
                     I was able to pick up on minor annoyances and complaints regarding
                     our competitors, allowing me to identify challenges and potential
-                    solutions to test. </p>
-                  <div class="survey-results">
-                      <h4>Challenges</h4>
+                    solutions to test. The respondents, while sharing challenges, also
+                    proposed solutions. Solutions that we could test through the rebrand.</p>
+          </section>
+          <section class="options">
+              <div class="options-container">
+                  <div class="first">
+                      <h3>Challenges</h3>
                       <ul class="survey">
                           <li>Remembering what they bookmarked</li>
                           <li>Not accessible across devices</li>
                           <li>Remembering more passwords</li>
                       </ul>
                   </div>
-                  <div class="survey-results">
-                      <h4>Solutions(?)</h4>
-                      <p>The respondents, while sharing challenges, also proposed
-                        solutions. Solutions that we could test through the rebrand.</p>
+                  <div class="second">
+                      <h3>Solutions(?)</h3>
                       <ul class="survey">
                             <li>Integration across devices: smartphone, laptop, desktop, TV</li>
                             <li>Useful bookmarking/saving: creating collections</li>
@@ -100,6 +106,8 @@
                       </ul>
                   </div>
               </div>
+          </section>
+          </section class="users">
               <div class="users">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
@@ -134,36 +142,43 @@
               </div>
           </section>
           <section class="info-arch">
-              <h2>information architecture</h2>
-              <h3>Mapping</h3>
-              <p></p>
               <div class="mapping">
-                  <img src="images/coop-flow1.png" class="first">
-                  <img src="images/coop-flow2.png" class="second">
+                  <h2>information architecture</h2>
+                  <h3>Mapping</h3>
+                  <p></p>
+                  <div class="mapping-img">
+                      <img src="images/coop-flow1.png" class="first" id="smaller">
+                      <img src="images/coop-flow2.png" class="second">
+                  </div>
               </div>
-              <h3>Flows</h3>
-              <p></p>
               <div class="mapping">
-                  <img src="images/coop-flow3.png" class="first">
-                  <img src="images/coop-flow4.png" class="second">
+                  <h3>Flows</h3>
+                  <p></p>
+                  <div class="mapping-img">
+                      <img src="images/coop-flow3.png" class="first">
+                      <img src="images/coop-flow4.png" class="second">
+                  </div>
               </div>
           </section>
           <section class="sketch">
-              <h2>iterations & wireframes</h2>
-              <h3>Sketching to Lo-Fi</h3>
-              <img src="images/coop-sketches.png" class="more-full">
+              <div class="sketching">
+                  <h2>iterations & wireframes</h2>
+                  <h3>Sketching to Lo-Fi</h3>
+                  <img src="images/coop-sketches.png" class="more-full">
               </div>
           </section>
           <section class="branding">
-              <h2>branding</h2>
-              <img src="images/coop-logo-form.png" class="more-full">
-              <h3>Logo Formation</h3>
-              <img src="images/coop-logofinalists.png" class="coop-logo-formation">
-              </div>
-              <h3>Logo & Icons</h3>
-              <div class="final-logos">
-                  <img src="images/coop-logo.png" class="first">
-                  <img src="images/coop-icons.png" class="second">
+              <div class="case-logos">
+                  <h2>branding</h2>
+                  <img src="images/coop-logo-form.png" class="more-full">
+                  <h3>Logo Formation</h3>
+                  <img src="images/coop-logofinalists.png" class="coop-logo-formation">
+                  </div>
+                  <h3>Logo & Icons</h3>
+                  <div class="final-logos">
+                      <img src="images/coop-logo.png" class="first">
+                      <img src="images/coop-icons.png" class="second">
+                  </div>
               </div>
               <div class="colors">
                   <h3>Colors</h3>
@@ -178,65 +193,76 @@
                       </ul>
                   </div>
               </div>
-              <div class="type">
-                  <h3>Typography</h3>
-                  <ul class="type-fonts">
-                      <li><span class="h1">H1 Nunito</span></li>
-                      <li><span class="h2">H2 Nunito</span></li>
-                      <li><span class="h3">H3 Nunito</span></li>
-                      <li><span class="body">Body Lora</span></li>
-                  </ul>
-                  <!-- <img src="images/coop-type.png" class="first"> -->
+              <div class="other-branding">
+                  <div class="type">
+                      <h3>Typography</h3>
+                      <ul class="type-fonts">
+                          <li><span class="h1">H1 Nunito</span></li>
+                          <li><span class="h2">H2 Nunito</span></li>
+                          <li><span class="h3">H3 Nunito</span></li>
+                          <li><span class="body">Body Lora</span></li>
+                      </ul>
+                  </div>
               </div>
           </section>
           <section class="prototype">
-              <h2>prototype</h2>
-              <!--
-              <h3>User Feedback</h3>
-                  <div class="user-feedback">
-                      <div class="quotes">
-                          <p class="first">""</p>
-                          <p class="second">“”</p>
-                      </div>
-                      <p></p>
-                  </div> -->
-              <h3>Landing Page</h3>
-              <img src="images/coop-landing.png" class="more-full">
-              <h3>User Onboarding</h3>
+              <div class="prototype-container">
+                  <h2>prototype</h2>
+                  <!--
+                  <h3>User Feedback</h3>
+                      <div class="user-feedback">
+                          <div class="quotes">
+                              <p class="first">""</p>
+                              <p class="second">“”</p>
+                          </div>
+                          <p></p>
+                      </div> -->
+                  <h3>Landing Page</h3>
+                  <img src="images/coop-landing.png" class="full">
+              </div>
+              <div class="prototype-container">
+                  <h3>User Onboarding</h3>
                   <p>The user onboarding and sign-in sections are simple and similar.
                     We made it easy to sign up or log in through social network sites.</p>
                   <img src="images/coop-signup.png" class="first">
                   <img src="images/coop-signin.png" class="second">
-
-              <h3>Dashboard</h3>
-              <img src="images/coop-dash.png" class="more-full">
-
-              <h3>Membership</h3>
-              <ul class="prototype-images">
-                  <li><img src="images/coop-profile.png" class="third"></li>
-                  <li><img src="images/coop-notifications.png" class="third"></li>
-                  <li><img src="images/coop-membership.png" class="third"></li>
-              </ul>
-              <h3>Adding content</h3>
-              <p>To add content, the user will click on the “Add +” call to action.
-                Once clicked, modal windows will appear. Users have a choice of
-                adding an image, notes, or a link to an external site.</p>
-              <ul class="prototype-images">
-                  <li><img src="images/coop-add-image.png" class="third"></li>
-                  <li><img src="images/coop-note.png" class="third"></li>
-                  <li><img src="images/coop-link.png" class="third"></li>
-              </ul>
+              </div>
+              <div class="prototype-container">
+                  <h3>Dashboard</h3>
+                  <img src="images/coop-dash.png" class="full">
+              </div>
+              <div class="prototype-container">
+                  <h3>Membership</h3>
+                  <ul class="prototype-images">
+                      <li><img src="images/coop-profile.png" class="third"></li>
+                      <li><img src="images/coop-notifications.png" class="third"></li>
+                      <li><img src="images/coop-membership.png" class="third"></li>
+                  </ul>
+              </div>
+              <div class="prototype-container">
+                  <h3>Adding content</h3>
+                  <p>To add content, the user will click on the “Add +” call to action.
+                    Once clicked, modal windows will appear. Users have a choice of
+                    adding an image, notes, or a link to an external site.</p>
+                  <ul class="prototype-images">
+                      <li><img src="images/coop-add-image.png" class="third"></li>
+                      <li><img src="images/coop-note.png" class="third"></li>
+                      <li><img src="images/coop-link.png" class="third"></li>
+                  </ul>
+              </div>
           </section>
 
           <section class="conclusion">
-              <h2>what i leared from this experience</h2>
-              <p>Dashboards are very personal. Most users wanted the ability to
-                customize how it looked - colors and background.
-              <p>Your taste is less important than the user’s style preferences.
-                I had created two versions - one that I loved and the other, which
-                every person that was surveyed and interviewed preferred. It was
-                a sobering experience. But, we have to give the people what they
-                want, despite our own personal preferences.</p>
+              <div class="conclusion-container">
+                  <h2>what i leared from this experience</h2>
+                  <p>Dashboards are very personal. Most users wanted the ability to
+                    customize how it looked - colors and background.
+                  <p>Your taste is less important than the user’s style preferences.
+                    I had created two versions - one that I loved and the other, which
+                    every person that was surveyed and interviewed preferred. It was
+                    a sobering experience. But, we have to give the people what they
+                    want, despite our own personal preferences.</p>
+              </div>
           </section>
           <section class="navigation">
               <div class="arrows">
