--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="home-hero">
                   <h1>gulbahar okuyan-waugh is a <span>ux designer</span></h1>
                   <p>Based in Milan, she's available for consulting in UX design, user research,
-                    & marketing. View <a href="index.html">portfolio</a> below or
+                    & marketing. Scroll down for my <a href="index.html">portfolio</a> or
                     <a href="about.html">learn more</a>.</p>
               </div>
           </section>
