--- a/rfs.html
+++ b/rfs.html
@@ -59,13 +59,16 @@
           <section class="intro">
               <div class="intro-text">
                   <h2>starting from the sole up</h2>
-                  <p>We needed a better understanding of the environment - who else was doing this?
+                  <p>Since we were going from an Etsy site to a stand-alone e-commerce site,
+                    we needed a better understanding of the environment: who else was doing this?
                     How will we convince strangers to buy these shoes? Where should we market the new
                     site? And most importantly, how do we set ourselves up to compete?</p>
+                  <img src="images/etsy-rfs.png" class="full">
               </div>
               <div class="competition">
                   <h3>Who's Out There?</h3>
-                  <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
+                  <p>During the stakeholder interview, Darcy identified a few other companies
+                  with a similar business model:</p>
                   <p>
                   <div class="inspo">
                       <li><img src="images/inspo1.png" class="third"></li>
@@ -75,7 +78,7 @@
                       <li><img src="images/comp2.png" class="third"></li>
                       <!--<li><img src="images/comp3.png" class="sixth"></li>-->
                   </div>
-                  <div class="box"><p> </p></div>
+                  <div class="box"><p></p></div>
                   <p>
                   <p>Design pattern: the direct competitors use stone/slate textures and colors,
                     while the sources of inspiration rely on a black and white color scheme with
@@ -83,9 +86,9 @@
               </div>
               <div class="user-research">
                   <h3>But first, what do the people want?</h3>
-                  <p>Considering the distinct nature of this business: of painting second-hand,
-                    vintage, or out of season shoes, we needed a better understanding of how to
-                    market to the target customer. We also needed to identify the target customer.
+                  <p>Considering the distinct nature of this business - painting second-hand,
+                    vintage, or out-of-season shoes - we had to figure out how to properly
+                    market the product. We also needed to identify the target customer.
                     The first survey, with 33 respondents, reconfirmed what we knew:</p>
                   <div class="survey-results">
                       <ul class="survey">
@@ -93,14 +96,14 @@
                           <li><span>75.8%</span> would purchase shoes online</li>
                           <li><span>48%</span> would buy or consider buying refurbished shoes</li>
                       </ul>
-                      <p>The seven out of eight (87.5%) respondents who would pay between $100-$300 for a
-                        pair of shoes, who would also purchase shoes online and 50% would consider buying
-                        refurbished shoes.</p>
+                      <p>And gave us our target customer: out of the 87.5% of respondents
+                        who would pay between $100-$300 for a pair of shoes AND would purchase
+                        shoes online, 50% of them would consider buying refurbished shoes.</p>
                   </div>
 
                   <div class="survey-results">
-                      <p>The second survey, with <span>133 respondents</span> and third survey gave us
-                        insight into our word choice: </p>
+                      <p>The second survey, with <span>133 respondents</span>, and third survey gave
+                        insight into word choice: </p>
                       <ul class="survey">
                           <li><span>54.3%</span> would consider buying hand-dyed shoes</li>
                           <li><span>25.4%</span> would buy hand-dyed shoes</li>
@@ -146,7 +149,7 @@
                     respondents suggesting a section devoted to hand-painting techniques.</p>
                   <img src="images/rfs-site-map.png" class="full">
               </div>
-              <div class="flows">
+              <div class="mapping">
                   <h3>Flows</h3>
                   <p>Based on our user personas, we decided to target the Vincent’s and
                     Marcus' through Instagram and Facebook, while the Jean's would learn
@@ -220,11 +223,11 @@
                         dyeing process and on the specific shoes that are being sold.</p>
                   </div>
               </div>
-              <div class="landing-container">
+              <div class="prototype-container">
                   <h3>Landing Page</h3>
                   <img src="images/homepage.png" class="full">
               </div>
-              <div class="about-container">
+              <div class="prototype-container">
                   <h3>About, Contact, FAQ</h3>
                   <ul class="prototype-images">
                       <li><img src="images/about-refated.png" class="third"></li>
@@ -232,7 +235,7 @@
                       <li><img src="images/FAQ.png" class="third"></li>
                   </ul>
               </div>
-              <div class="purchasing-container">
+              <div class="prototype-container">
                   <h3>Purchasing Flow</h3>
                   <ul class="prototype-images">
                       <li><img src="images/rfs-detail.png" class="third"></li>
@@ -240,7 +243,7 @@
                       <li><img src="images/payment.png" class="third"></li>
                       <li><img src="images/rfs-confirmation.png" class="third"></li>
                   </ul>
-              <div class="membership">
+              <div class="prototype-container">
                   <h3>Membership</h3>
                   <p>Darcy’s goal is to include membership services once he builds a
                     larger following. So, we planned for the future and designed an
