Fixed CSS for coop case study

--- a/coop.html
+++ b/coop.html
@@ -100,8 +100,8 @@
                   <div class="second">
                       <h3>Solutions(?)</h3>
                       <ul class="survey">
-                            <li>Integration across devices: smartphone, laptop, desktop, TV</li>
-                            <li>Useful bookmarking/saving: creating collections</li>
+                            <li>Integration across devices</li>
+                            <li>Useful bookmarking/ saving: creating collections</li>
                             <li>Convenience: social sign-on</li>
                       </ul>
                   </div>
@@ -112,14 +112,14 @@
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
                       <div class="john">
-                          <img src="images/johno.png" class="first">
-                          <div class="second">John doesn’t always save images or content he
-                            finds online, but when he does, he tends to bookmark them on
-                            his brower. He has no negative feelings towards this practice,
+                          <img src="images/johno.png" class="third">
+                          <p class="second">John doesn’t always save images or content he
+                            finds online, but when he does, he bookmarks them on
+                            his browser. He has no negative feelings towards this practice,
                             and appreciates the simplicity of saving it directly to the
                             browser. He uses desktop and smartphone applications to write
                             and save notes, but doesn’t like how he can’t sync or import
-                            them across devices.</div>
+                            them across devices.</p>
                       </div>
                       <div class="elaine">
                           <div class="first">Elaine doesn’t always save images or content,
@@ -128,10 +128,10 @@
                             pen & paper. Unfortunately, she usually forgets what she saves.
                             She’ll save notes on desktop applications, including Word and
                           calendar reminders. This helps her better remember things. </div>
-                        <img src="images/elainec.png" class="second">
+                        <img src="images/elainec.png" class="third">
                       </div>
                       <div class="marta">
-                        <img src="images/martaa.png" class="first">
+                        <img src="images/martaa.png" class="third">
                         <div class="second">Marta typically only saves recipes or travel
                           articles, and she saves them as draft emails on her Gmail.
                           She also uses Pocket as a way to bookmark, but the install
