updated RFS case study

--- a/coop.html
+++ b/coop.html
@@ -86,6 +86,7 @@
                     our competitors, allowing me to identify challenges and potential
                     solutions to test. The respondents, while sharing challenges, also
                     proposed solutions. Solutions that we could test through the rebrand.</p>
+              </div>
           </section>
           <section class="options">
               <div class="options-container">
@@ -107,7 +108,7 @@
                   </div>
               </div>
           </section>
-          </section class="users">
+          <section class="users">
               <div class="users">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
