--- a/rfs.html
+++ b/rfs.html
@@ -109,28 +109,31 @@
                           <li><span>25.4%</span> would buy hand-dyed shoes</li>
                           <li><span>"used"</span> most resembled "refurbished"</li>
                       </ul>
+                      <p>I conducted another survey to test whether it was the term “refurbished” or the concept
+                        behind RF that turned customers away. The word refurbished had to change, so we decided
+                        on hand-painted. This term tested well during the website prototype.</p>
                   </div>
-                  <div class="options">
+          </section>
+          <section class="options">
+              <div class="options-container">
                       <div class="first">
-                          <h4>Challenges</h4>
+                          <h3>Challenges</h3>
                           <ul class="survey">
                               <li>The word "refurbished"</li>
                               <li>Ambiguity behind the refurbishing process</li>
                           </ul>
                       </div>
                       <div class="second">
-                          <h4>Solutions</h4>
+                          <h3>Solutions</h3>
                               <ul class="survey">
                                   <li>Replace "refurbished" with "hand-painted"</li>
                                   <li>Show before / after pictures</li>
                                   <li>Explain the process </li>
                               </ul>
                       </div>
-                  </div>
-                  <p>I conducted another survey to test whether it was the term “refurbished” or the concept
-                    behind RF that turned customers away. The word refurbished had to change, so we decided
-                    on hand-painted. This term tested well during the website prototype.</p>
               </div>
+          </section>
+          <section class="users">
               <div class="users">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
@@ -245,7 +248,7 @@
                   </ul>
               <div class="prototype-container">
                   <h3>Membership</h3>
-                  <p>Darcy’s goal is to include membership services once he builds a
+                  <p class="user-feedback">Darcy’s goal is to include membership services once he builds a
                     larger following. So, we planned for the future and designed an
                     account page.</p>
                   <img src="images/rfs-account.png" class="full">
@@ -254,7 +257,7 @@
 
           <section class="conclusion">
               <div class="conclusion-container">
-                  <h2>what i leared from this experience</h2>
+                  <h2>what i learned from this experience</h2>
                   <p>In retail, photography is just as important as the site design.
                     To dispel concerns of condition and quality, the users requested
                     more photos of the finished product as well as the painting process.
