--- a/about.html
+++ b/about.html
@@ -77,6 +77,7 @@
 
       <section class="capabilities">
           <div class="caps">
+              <div class="clearfix"> </div>
               <div class="skills">
                   <h3>Skills</h3>
                   <p>UX design, UI design, branding & identity, information architecture,
@@ -88,7 +89,7 @@
                   <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
                     Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
               </div>
-              <p>
+              <div class="clearfix"> </div>
           </div>
       </section>
 
