--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-      <header id="container">
+      <header>
           <nav>
               <a href="index.html" class="logo">
                   <img src="images/spring.png" alt="gulbahar okuyan logo">
@@ -50,23 +50,24 @@
           <section class="projects">
               <div class="project-block-rfs">
                   <div class="content">
-                      <p>
+                      <div class="clearfix"></div>
                       <div class="first">
                           <a href="rfs.html" class="rfs-image">
                                 <img src="images/rfs-laptop.png">
                           </a>
                       </div>
                       <div class="second">
-                            <a href="rfs.html"><h3>Starting from the sole up</h3></a>
+                            <a href="rfs.html"><h3>from the sole up</h3></a>
                             <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
-                              help taking his company to the next level: brand identity & e-commerce site.
+                              help taking his company to the next level.</p>
+                            <a href="rfs.html"><button>see case study</button></a>
                       </div>
-                      <p>
+                      <div class="clearfix"></div>
                   </div>
               </div>
               <div class="project-block-coop">
                   <div class="content">
-                      <p>
+                      <div class="clearfix"></div>
                       <div class="first">
                           <a href="coop.html" class="coop-image">
                                 <img src="images/coop-laptop.png">
@@ -74,10 +75,11 @@
                       </div>
                       <div class="second">
                             <a href="coop.html"><h3>A new set of wings</h3></a>
-                            <p>A fun platform that makes it easy to share, store, and collaborate
-                              with friends & colleagues that needed help rebranding for a new audience.
+                            <p>A platform that makes it easy to share, store, and collaborate
+                               needed help rebranding for a new audience.</p>
+                               <a href="coop.html"><button>see case study</button></a>
                       </div>
-                      <p>
+                      <div class="clearfix"></div>
                   </div>
               </div>
           </section>
